# tlock

./: .gitignore  Cargo.toml  LICENSE.md  README.md  config
src/: config.rs  debug.rs  default_config  main.rs  symbols.rs  utils.rs
src/modes/: chrono.rs  clock.rs  countdown.rs  debug.rs  mod.rs  timer.rs
src/rendering/: color.rs  mod.rs
