[package]
name = "tlock"
version = "0.1.0"
edition = "2021"
authors = ["Pihkaal <hello@pihkaal.me>"]

description = "Fully customizable cross-platform clock for the terminal."
homepage = "https://github.com/pihkaal/tlock"
repository = "https://github.com/pihkaal/tlock"

keywords = ["clock", "unixporn", "terminal"]
categories = ["command-line-utilities"]

readme = "README.md"
license = "MIT"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["derive", "cargo"] }
crossterm = "0.27.0"
dirs = "5.0.1"
ini = "1.3.0"
parse_duration = "2.1.1"

